--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,20 @@ a { text-decoration: none; }
 .question-item img {
   width: 200px;
 }
+
+.answer-item {
+  width: 300px;
+  height: 300px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #000000;
+  text-align: center;
+}
+.answer-item img {
+  width: 200px;
+}
+.answer-item .text {
+  font-size: 16px;
+  font-weight: bold;
+  color: #000000;
+}
