--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,60 @@ body {
   width: 285px;
   height: calc(100% - 20px);
   margin: 10px;
+  margin-left: 0;
+}
+
+.user-icon {
+  width: 48px;
+  height: 48px;
+  background: #888888;
+  border-radius: 5px;
+}
+
+.myself-container {
+  margin-left: 10px;
+  padding: 10px;
+  background-color: #444B5D;
+}
+
+.myself {
+  display: flex;
+}
+.myself .user-icon {
+  width: 40px;
+  height: 40px;
+}
+.myself .user-name {
+  padding-left: 8px;
+  font-size: 13px;
+  font-weight: bold;
+}
+input[type='file'] {
+  margin: 10px 0;
+}
+.toot-button-container {
+  text-align: right;
+}
+.toot-button {
+  height: 36px;
+  padding: 0px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #2588D0;
+  line-height: 36px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
+
+textarea {
+  width: 100%;
+  height: 110px;
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 14px;
 }
 
 .toot-container {
@@ -47,12 +101,6 @@ body {
 }
 .toot-item .right-container {
   padding-left: 10px;
-}
-.toot-item .user-icon {
-  width: 48px;
-  height: 48px;
-  background: #888888;
-  border-radius: 5px;
 }
 .toot-item .user-name {
   line-height: 18px;
