--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,10 @@ textarea {
   font-size: 15px;
   color: #FFFFFF;
 }
+.toot-item .login-name {
+  font-size: 14px;
+  color: #606984;
+}
 .toot-item .text {
   margin: 0;
   line-height: 20px;
