--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
   line-height: 1.0;
-  font-family: 'Roboto, sans-serif';
+  font-family: 'Roboto', sans-serif;
 }
 div { box-sizing: border-box; }
 a { text-decoration: none; }
