--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ textarea {
 }
 
 .toot-container {
-  background-color: #FFFFFF;
+  background-color: #282c37;
 }
 
 .toot-container .contents {
@@ -126,4 +126,34 @@ textarea {
   line-height: 17px;
   font-size: 13px;
   color: #d9e1e8;
+}
+.toots{
+  background-color: red;
+}
+.toot-user-icon img{
+  width:50px;
+  height:50px;
+  border-radius: 4px;
+}
+
+.toot-user{
+  display: flex;
+  padding-bottom: 10px;
+}
+.toot{
+  padding:10px;
+}
+.toot-user-name{
+  padding-left: 5px;
+}
+.toot-user-id{
+  padding-left: 5px;
+  color:gray;
+}
+.toot-text{
+  padding-bottom:10px;
+}
+.toot-image img{
+  width:100%;
+  border-radius: 4px;
 }
